feat: update s3, codeDeploy name

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ on:
 # 리전, 버킷 이름, CodeDeploy 앱 이름, CodeDeploy 배포 그룹 이름
 env:
   AWS_REGION: ap-northeast-2
-  S3_BUCKET_NAME: my-github-actions-s3-bucket #s3버킷이름
-  CODE_DEPLOY_APPLICATION_NAME: my-codedeploy-app #CodeDeploy이름
-  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: my-codedeploy-deployment-group #CodeDeployGroup이름
+  S3_BUCKET_NAME: rabbit-letter-cd #s3버킷이름
+  CODE_DEPLOY_APPLICATION_NAME: app #CodeDeploy이름
+  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: qa #CodeDeployGroup이름
 
 permissions:
   contents: read
@@ -26,6 +26,7 @@ jobs:
       # error
       - name: Run chmod to make gradlew executable
         run: chmod +x ./gradlew
+
       # (1) 기본 체크아웃
       - name: Checkout
         uses: actions/checkout@v3
