--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       # error
       - name: Run chmod to make gradlew executable
-        run: chmod +x ././gradlew
+        run: chmod +x ../../gradlew
 
       # (1) 기본 체크아웃
       - name: Checkout
