feat: 파일 경로 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,9 +23,9 @@ jobs:
     environment: production
 
     steps:
-      # error
+      # 실행 권한 부여
       - name: Run chmod to make gradlew executable
-        run: chmod +x ./gradlew
+        run: chmod +x gradlew
 
 
       # (1) 기본 체크아웃
