feat: 파일 경로 확인

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,13 @@ jobs:
     steps:
       # 실행 권한 부여
       - name: Run chmod to make gradlew executable
-        run: chmod +x gradlew
+#        run: |
+#          cd ./
+#          chmod +x gradlew
+        run: |
+          echo 'PARAM:' $0\
+          RELATIVE_DIR=`dirname "$0"`\
+          echo 'Dir:' $RELATIVE_DIR
 
 
       # (1) 기본 체크아웃
