--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,9 +25,8 @@ jobs:
     steps:
       # 실행 권한 부여
       - name: Run chmod to make gradlew executable
-        run: |
-          cd ./Rabbit-Letter-Backend\
-          chmod +x gradlew
+        run: chmod +x gradlew
+
 
       # (1) 기본 체크아웃
       - name: Checkout
