--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       # 실행 권한 부여
       - name: Run chmod to make gradlew executable
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
 
 
       # (1) 기본 체크아웃
