--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,10 +23,6 @@ jobs:
     environment: production
 
     steps:
-      # 실행 권한 부여
-      - name: Run chmod to make gradlew executable
-        run: chmod +x ./gradlew
-
 
       # (1) 기본 체크아웃
       - name: Checkout
@@ -39,6 +35,10 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
 
+
+      # 실행 권한 부여
+      - name: Run chmod to make gradlew executable
+        run: chmod +x gradlew
       # (3) Gradle build (Test 제외)
       - name: Build with Gradle
         uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
